# program-synthesis

./: README.md  arc_results.json  pyproject.toml  test_prompts.txt
examples/: evaluate_arc_dataset.py  run_pipeline.py  show_arc_run.py  visualize_arc_failures.py
src/synthesis/: __init__.py  evaluation.py  llm_interface.py  openai_client.py  prompts.py  synthesis_loop.py  tasks.py  utils.py  workspace.py
src/synthesis/plugins/: python_executor.py
src/synthesis_pipeline.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_arc_benchmark.py  test_pipeline.py
